--- a/src/styles/TechStack.css
+++ b/src/styles/TechStack.css
@@ -1,6 +1,6 @@
 #tech-stack {
   width: 100%;
-  padding: 5px 0 60px 0;
+  padding: 80px 0 60px 0;
   overflow: hidden;
   background-color: var(--navy);
   position: relative;
@@ -73,7 +73,7 @@
 
 @media only screen and (max-width: 600px) {
   #tech-stack {
-    padding: 5px 0 40px 0;
+    padding: 60px 0 40px 0;
   }
 
   .tech-item {
